--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
                 <h3 class="ou-smaller">Navigation</h3>
                 <ul class="ou-list ou-list--links">
                     <li>
-                        <a href="docs/navigation/nav-top.html">Back to top</a>
-                    </li>
+                                <a href="docs/navigation/nav-top-link.html">Back to top link</a>
+                            </li>
+                            <li>
+                                <a href="docs/navigation/nav-top-footer-button.html">Footer back to top button</a>
+                            </li>
                     <li>
                         <a href="docs/navigation/nav-breadcrumbs.html">Breadcrumbs</a>
                     </li>
